src/objects/Equipment__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Purchase__c</fullName>
        <label>Date of Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment_Log__c</fullName>
        <label>Equipment Log</label>
        <referenceTo>Equipment_Log__c</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inverter_Type__c</fullName>
        <label>Inverter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Centralized</fullName>
                </value>
                <value>
                    <fullName>Decentralized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inverter_Type_del__c</fullName>
        <label>Inverter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Centralized</fullName>
                </value>
                <value>
                    <fullName>Decentralized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Tilt__c</fullName>
        <label>Module Tilt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Racking_Type__c</fullName>
        <label>Racking Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pile-Driven</fullName>
                </value>
                <value>
                    <fullName>Ground_Screws</fullName>
                    <label>Ground Screws</label>
                </value>
                <value>
                    <fullName>Ballasts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <inlineHelpText>Modules: kW DC
Inverters: kW AC</inlineHelpText>
        <label>Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <formula>IF( RecordType.DeveloperName == &quot;Racking&quot;, NULL, ( Cost__c / Quantity__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <inlineHelpText>Module: kW DC
Inverter: kW AC</inlineHelpText>
        <label>Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>kW AC</fullName>
                </value>
                <value>
                    <fullName>kW DC</fullName>
                </value>
                <value>
                    <fullName>kVA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Equipment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Equipment &amp; Manufacturer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <recordTypes>
        <fullName>Combiner_Boxes</fullName>
        <active>true</active>
        <label>Combiner Boxes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Equipment_Default</fullName>
        <active>true</active>
        <label>Equipment (Default)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inverter</fullName>
        <active>true</active>
        <label>Inverter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Module</fullName>
        <active>true</active>
        <label>Module</label>
    </recordTypes>
    <recordTypes>
        <fullName>Neutral_Ground_Reactor</fullName>
        <active>true</active>
        <label>Neutral Ground Reactor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Racking</fullName>
        <active>true</active>
        <label>Racking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transformer</fullName>
        <active>true</active>
        <label>Transformer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>